Design: Design add post screen

--- a/app/src/main/res/layout/rv_item_add_post_add_place.xml
+++ b/app/src/main/res/layout/rv_item_add_post_add_place.xml
@@ -3,13 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
-    android:paddingVertical="4dp">
+    android:background="@color/light_gray">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:background="@drawable/shape_radius_8"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="4dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
