--- a/app/src/main/res/layout/rv_item_add_post_add_place_list.xml
+++ b/app/src/main/res/layout/rv_item_add_post_add_place_list.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray_dark"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="horizontal"
     android:paddingVertical="4dp">
@@ -16,5 +16,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="목록 추가"
-        android:textSize="22sp" />
+        android:textSize="20sp" />
 </LinearLayout>
