--- a/app/src/main/res/layout/rv_item_add_post_content.xml
+++ b/app/src/main/res/layout/rv_item_add_post_content.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray"
-    android:minHeight="150dp"
+    android:minHeight="100dp"
+    android:background="@color/white"
     android:paddingHorizontal="16dp"
     android:paddingVertical="4dp">
 
