--- a/app/src/main/res/layout/rv_item_add_post_place_list.xml
+++ b/app/src/main/res/layout/rv_item_add_post_place_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray_dark"
+    android:background="@color/light_gray"
     android:paddingHorizontal="16dp"
     android:paddingVertical="4dp">
 
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:hint="장소 목록 이름을 입력해 주세요"
-        android:textSize="22sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_delete_place_list"
         app:layout_constraintStart_toStartOf="parent"
